[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | src\/backward-cpp
    | src\/fmt
    | src\/pybind11
    | src\/tensorpipe
  )/
  | atari_preprocessing\.py
)
'''
[tool.isort]
force_single_line = true

[tool.poetry]
name = "moolib"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "<2.0"
hydra = "^2.5"
omegaconf = "^2.3.0"
wandb = "^0.14.0"
hydra-core = "^1.3.2"
numpy = "^1.24.2"
gym = {version = "0.23.1", extras = ["accept-rom-license", "atari"]}
opencv-python = "^4.7.0.72"
pygame = "^2.3.0"
coolname = "^2.2.0"
envpool = "0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
